--- a/roles/netapp_common/tasks/network.yml
+++ b/roles/netapp_common/tasks/network.yml
@@ -1,5 +1,16 @@
 ---
 
+- name: Configure DNS
+  netapp.ontap.na_ontap_dns:
+    nameservers: "{{ item['server'] }}"
+    domains: "{{ item['domain'] }}"
+    state: "{{ item['state'] }}"
+    hostname: "{{ netapp_common_hostname }}"
+    username: "{{ netapp_common_username }}"
+    password: "{{ netapp_common_password }}"
+    validate_certs: "{{ netapp_common_validate_certs | default(false) }}"
+  loop: "{{ netapp_common_dns_server }}"
+
 - name: Configure NTP
   netapp.ontap.na_ontap_ntp:
     server_name: "{{ item['server'] }}"
