--- a/roles/netapp_common/tasks/network.yml
+++ b/roles/netapp_common/tasks/network.yml
@@ -3,6 +3,7 @@
 - name: Configure DNS
   netapp.ontap.na_ontap_dns:
     nameservers: "{{ item['server'] }}"
+    domains: "{{ item['domains'] }}"
     state: "{{ item['state'] }}"
     hostname: "{{ netapp_common_hostname }}"
     username: "{{ netapp_common_username }}"
