--- a/roles/netapp_common/defaults/main.yml
+++ b/roles/netapp_common/defaults/main.yml
@@ -14,6 +14,7 @@ netapp_common_validate_certs: false
 
 netapp_common_dns_server:
   - server: "192.168.122.1"
+    domains: "lab.rk-it.at"
     state: present
   - server: "8.8.8.8"
     state: absent
