--- a/roles/netapp_common/tasks/login.yml
+++ b/roles/netapp_common/tasks/login.yml
@@ -8,3 +8,5 @@
     username: "{{ netapp_common_username }}"
     password: "{{ netapp_common_password }}"
     validate_certs: "{{ netapp_common_validate_certs | default(false) }}"
+  tags:
+    - bootstrapping
